# PowerTrace

./: .gitignore  .mcp.json  LICENSE  README.md  kitchen_test.dxf
backend/: .env  .env.example  AGENTS.md  API_SKELETON.md  README.md  alembic.ini  debug_edges.py  generate_floor_plan.py  main.py  pyproject.toml
backend/agents/: backend-documentation-agent.md  repository-analyst.md  thesis-writing-agent.md
backend/alembic/: env.py
backend/alembic/versions/: 20260610_01_multiuser_auth.py
backend/app/: __init__.py  config.py  database.py  db_models.py  main.py  security.py
backend/app/dependencies/: auth.py
backend/app/repositories/: __init__.py  projects.py  users.py
backend/app/schemas/: __init__.py  auth.py  floor_plan.py  generation.py  project.py
backend/app/services/: generation.py
backend/core/: __init__.py  calculations.py
backend/core/drawing/: __init__.py  appliances.py  engine.py  geometry.py  layers.py  legend.py  walls.py  (+2 more)
backend/models/: __init__.py  appliances.py  base.py  circuit.py  floor_plan.py  rooms.py
backend/scripts/: __init__.py  generate.py
backend/services/: __init__.py
backend/standards/: __init__.py  nbr5410.py  nbr8995.py
backend/tests/: conftest.py  test_auth_api.py  test_auth_migration.py  test_circuit.py  test_determinism.py  test_generation_api.py  test_generation_schemas.py  test_generation_service.py  test_generator.py  test_geometry.py  test_layout_constraints.py  test_lighting.py  test_openings_placer.py  test_room_roles.py  test_rooms.py  test_standards.py  test_stress.py  test_tue_overrides.py  test_walls.py
(+61 files in other folders)
